--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Your awesome title
-author: GitHub User
+title: Tutorial on Creating Github Pages
+author: mmm-code
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
